--- a/index.html
+++ b/index.html
@@ -93,6 +93,27 @@
                     <p class="producto--card-body"> Nuestra API toma información minuto a minuto sobre las tasas más determinan el comportamiento</p>
                 </article>
             </section>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="eye"></span>
+                    <p class="producto--card-title">No hay tasas escondidas</p>
+                    <p class="producto--card-body"> Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+            </section>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="dollar"></span>
+                    <p class="producto--card-title">Compara monedas</p>
+                    <p class="producto--card-body"> No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+                </article>
+            </section>
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="goal"></span>
+                    <p class="producto--card-title">Información confiable</p>
+                    <p class="producto--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+                </article>
+            </section>
         </section>
         <section></section>
         <section></section>
