--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
         </div>
-        <a href="" class="header--button">Conoce Nuestros Planes <span></span></a>
+        <a href="#plans" class="header--button">Conoce Nuestros Planes <span></span></a>
     </header>
 </head>
 <body>
@@ -115,8 +115,44 @@
                 </article>
             </section>
         </section>
-        <section></section>
-        <section></section>
+        <section class="bitcoin-img-container">
+            <h2>Conócelo hoy.</h2>
+        </section>
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2> Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section class="plans-container--slider">
+                <article class="plans-container--card">
+                    <p class="recommend">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--tittle">Pago Anual</h3>
+                        <p class="plan-card--price"> <span>$</span>99</p>
+                        <p class="plan-card-saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escojer este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card">
+                    <p class="basic">Básico</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--tittle">Pago mensual</h3>
+                        <p class="plan-card--price"> <span>$</span>19</p>
+                        <p class="plan-card-saving">*Plan Básico aunque con todas las ventajas.</p>
+                        <button class="plan-card--ca">Escojer este <span></span></button>
+                    </div>
+                </article>
+                <article class="plans-container--card2">
+                    <p class="Unlimited">Ilimitado</p>
+                    <div class="plan-info-container2">
+                        <h3 class="plan-card--tittle2">De por vida</h3>
+                        <p class="plan-card--price2"> <span>$</span>199</p>
+                        <p class="plan-card-saving2">*Exclusivo para los primeros 100 clientes con un precio especial.</p>
+                        <button class="plan-card--ca2">Escojer este <span></span></button>
+                    </div>
+                </article>
+            </section>
+        </section>
     </main>
 </body>
 </html>
