--- a/index.html
+++ b/index.html
@@ -8,151 +8,142 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
-    <header>
-        <img src="./assets/imgs/logo.svg" alt="">
-        <div class="header--title-container">
-            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
-            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-        </div>
-        <a href="#plans" class="header--button">Conoce Nuestros Planes <span></span></a>
-    </header>
+    <header></header>
 </head>
 <body>
-    <main>
-        <section class="main-exchange-container">
-            <div class="backgroundImg"></div>
-            <div class="main-exchange-container--title">
-                <h2>Visibilizamos todas las tasas de cambio.</h2>
-                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
-            </div>
-            <section class="main-tables-container">
-                <div class="main-currency-table"> 
-                    <p class="currency-table--title">Monedas</p>
-                    <div class="currency-table--container">
-                        <table>
-                            <tr>
-                                <td class="table__top-left">Bitcoin</td>
-                                <td class="table__top-right table__right">$1.96 <span class="down"></span></td>
-                            </tr>
-                            <tr>
-                                <td>Etherum</td>
-                                <td class="table__right">$ 0.07 <span class="up"></span></td>
-                            </tr>
-                            <tr>
-                                <td>Ripple</td>
-                                <td class="table__right" >$2.17 <span class="down"></span></td>
-                            </tr>
-                            <tr>
-                                <td class="table__bottom-left">Stellar</td>
-                                <td class="table__bottom-right table__right" >4.96 <span class="down"></span></td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="currency-table--date">
-                        <p> <b>Actualizado:</b> 19 JULIO 23:45</p>
-                    </div>
+    <section class="main-exchange-container">
+        <div class="backgroundImg"></div>
+        <div class="main-exchange-container--title">
+            <h2>Visibilizamos todas las tasas de cambio.</h2>
+            <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
+        </div>
+        <section class="main-tables-container">
+            <div class="main-currency-table"> 
+                <p class="currency-table--title">Monedas</p>
+                <div class="currency-table--container">
+                    <table>
+                        <tr>
+                            <td class="table__top-left">Bitcoin</td>
+                            <td class="table__top-right table__right">$1.96 <span class="down"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Etherum</td>
+                            <td class="table__right">$ 0.07 <span class="up"></span></td>
+                        </tr>
+                        <tr>
+                            <td>Ripple</td>
+                            <td class="table__right" >$2.17 <span class="down"></span></td>
+                        </tr>
+                        <tr>
+                            <td class="table__bottom-left">Stellar</td>
+                            <td class="table__bottom-right table__right" >4.96 <span class="down"></span></td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="main-commissions-table">
-                    <p class="commissions-table--title">Comisiones</p>
-                    <div class="commissions-table--container">
-                        <table>
-                            <tr>
-                                <td class="table__top-left">Bitride</td>
-                                <td class="table__top-right table__right">$12.96</td>
-                            </tr>
-                            <tr>
-                                <td>Bitpreco</td>
-                                <td class="table__right">$13.07</td>
-                            </tr>
-                            <tr>
-                                <td>Novadax</td>
-                                <td class="table__right">$13.15</td>
-                            </tr>
-                            <tr>
-                                <td class="table__bottom-left">Coinext</td>
-                                <td class="table__bottom-right table__right">$14.96</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="commissions-table--date">
-                        <p><b>Actualizado:</b> 19 JULIO 23:45</p>
-                    </div>
+                <div class="currency-table--date">
+                    <p> <b>Actualizado:</b> 19 JULIO 23:45</p>
                 </div>
-            </section>
-        </section>
-        <section class="main-product-detail">
-            <span class="producto-detail--batata-logo"></span>
-            <div class="product-detail--title">
-                <h2>Creamos un producto sin comparación.</h2>
-                <p>Confiable y diseñado para su uso diario</p>
             </div>
-            <section class="product-cards--container">
-                <article class="product-detail--card">
-                    <span class="clock"></span>
-                    <p class="producto--card-title">Tiempo real</p>
-                    <p class="producto--card-body"> Nuestra API toma información minuto a minuto sobre las tasas más determinan el comportamiento</p>
-                </article>
-            </section>
-            <section class="product-cards--container">
-                <article class="product-detail--card">
-                    <span class="eye"></span>
-                    <p class="producto--card-title">No hay tasas escondidas</p>
-                    <p class="producto--card-body"> Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
-                </article>
-            </section>
-            <section class="product-cards--container">
-                <article class="product-detail--card">
-                    <span class="dollar"></span>
-                    <p class="producto--card-title">Compara monedas</p>
-                    <p class="producto--card-body"> No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
-                </article>
-            </section>
-            <section class="product-cards--container">
-                <article class="product-detail--card">
-                    <span class="goal"></span>
-                    <p class="producto--card-title">Información confiable</p>
-                    <p class="producto--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
-                </article>
-            </section>
-        </section>
-        <section class="bitcoin-img-container">
-            <h2>Conócelo hoy.</h2>
-        </section>
-        <section id="plans" class="main-plans-container">
-            <div class="plans--title">
-                <h2> Escoge el plan que mejor se ajuste a ti.</h2>
-                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            <div class="main-commissions-table">
+                <p class="commissions-table--title">Comisiones</p>
+                <div class="commissions-table--container">
+                    <table>
+                        <tr>
+                            <td class="table__top-left">Bitride</td>
+                            <td class="table__top-right table__right">$12.96</td>
+                        </tr>
+                        <tr>
+                            <td>Bitpreco</td>
+                            <td class="table__right">$13.07</td>
+                        </tr>
+                        <tr>
+                            <td>Novadax</td>
+                            <td class="table__right">$13.15</td>
+                        </tr>
+                        <tr>
+                            <td class="table__bottom-left">Coinext</td>
+                            <td class="table__bottom-right table__right">$14.96</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="commissions-table--date">
+                    <p><b>Actualizado:</b> 19 JULIO 23:45</p>
+                </div>
             </div>
-            <section class="plans-container--slider">
-                <article class="plans-container--card">
-                    <p class="recommend">Recomendado</p>
-                    <div class="plan-info-container">
-                        <h3 class="plan-card--tittle">Pago Anual</h3>
-                        <p class="plan-card--price"> <span>$</span>99</p>
-                        <p class="plan-card-saving">*Ahorras $129 comparado al plan mensual.</p>
-                        <button class="plan-card--ca">Escojer este <span></span></button>
-                    </div>
-                </article>
-                <article class="plans-container--card">
-                    <p class="basic">Básico</p>
-                    <div class="plan-info-container">
-                        <h3 class="plan-card--tittle">Pago mensual</h3>
-                        <p class="plan-card--price"> <span>$</span>19</p>
-                        <p class="plan-card-saving">*Plan Básico aunque con todas las ventajas.</p>
-                        <button class="plan-card--ca">Escojer este <span></span></button>
-                    </div>
-                </article>
-                <article class="plans-container--card2">
-                    <p class="Unlimited">Ilimitado</p>
-                    <div class="plan-info-container2">
-                        <h3 class="plan-card--tittle2">De por vida</h3>
-                        <p class="plan-card--price2"> <span>$</span>199</p>
-                        <p class="plan-card-saving2">*Exclusivo para los primeros 100 clientes con un precio especial.</p>
-                        <button class="plan-card--ca2">Escojer este <span></span></button>
-                    </div>
-                </article>
-            </section>
         </section>
-    </main>
+    </section>
+    <section class="main-product-detail">
+        <span class="producto-detail--batata-logo"></span>
+        <div class="product-detail--title">
+            <h2>Creamos un producto sin comparación.</h2>
+            <p>Confiable y diseñado para su uso diario</p>
+        </div>
+        <section class="product-cards--container">
+            <article class="product-detail--card">
+                <span class="clock"></span>
+                <p class="producto--card-title">Tiempo real</p>
+                <p class="producto--card-body"> Nuestra API toma información minuto a minuto sobre las tasas más determinan el comportamiento</p>
+            </article>
+        </section>
+        <section class="product-cards--container">
+            <article class="product-detail--card">
+                <span class="eye"></span>
+                <p class="producto--card-title">No hay tasas escondidas</p>
+                <p class="producto--card-body"> Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+            </article>
+        </section>
+        <section class="product-cards--container">
+            <article class="product-detail--card">
+                <span class="dollar"></span>
+                <p class="producto--card-title">Compara monedas</p>
+                <p class="producto--card-body"> No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+            </article>
+        </section>
+        <section class="product-cards--container">
+            <article class="product-detail--card">
+                <span class="goal"></span>
+                <p class="producto--card-title">Información confiable</p>
+                <p class="producto--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+            </article>
+        </section>
+    </section>
+    <section class="bitcoin-img-container">
+        <h2>Conócelo hoy.</h2>
+    </section>
+    <section id="plans" class="main-plans-container">
+        <div class="plans--title">
+            <h2> Escoge el plan que mejor se ajuste a ti.</h2>
+            <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+        </div>
+        <section class="plans-container--slider">
+            <article class="plans-container--card">
+                <p class="recommend">Recomendado</p>
+                <div class="plan-info-container">
+                    <h3 class="plan-card--tittle">Pago Anual</h3>
+                    <p class="plan-card--price"> <span>$</span>99</p>
+                    <p class="plan-card-saving">*Ahorras $129 comparado al plan mensual.</p>
+                    <button class="plan-card--ca">Escojer este <span></span></button>
+                </div>
+            </article>
+            <article class="plans-container--card">
+                <p class="basic">Básico</p>
+                <div class="plan-info-container">
+                    <h3 class="plan-card--tittle">Pago mensual</h3>
+                    <p class="plan-card--price"> <span>$</span>19</p>
+                    <p class="plan-card-saving">*Plan Básico aunque con todas las ventajas.</p>
+                    <button class="plan-card--ca">Escojer este <span></span></button>
+                </div>
+            </article>
+            <article class="plans-container--card2">
+                <p class="Unlimited">Ilimitado</p>
+                <div class="plan-info-container2">
+                    <h3 class="plan-card--tittle2">De por vida</h3>
+                    <p class="plan-card--price2"> <span>$</span>199</p>
+                    <p class="plan-card-saving2">*Exclusivo para los primeros 100 clientes con un precio especial.</p>
+                    <button class="plan-card--ca2">Escojer este <span></span></button>
+                </div>
+            </article>
+        </section>
+    </section> 
 </body>
 </html>
