--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
-    <header></header>
+
 </head>
 <body>
+    <header>
+        <img src="./assets/imgs/logo.svg" alt="">
+        <div class="header--title-container">
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+        </div>
+        <a href="" class="header--button">Conoce Nuestros Planes <span></span></a>
+    </header>
     <section class="main-exchange-container">
         <div class="backgroundImg"></div>
         <div class="main-exchange-container--title">
@@ -145,5 +153,6 @@
             </article>
         </section>
     </section> 
+    <footer></footer>
 </body>
 </html>
