--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
         </div>
-        <a href="" class="header--button">Conoce Nuestros Planes <span></span></a>
+        <a href="#plans" class="header--button">Conoce Nuestros Planes <span></span></a>
     </header>
     <section class="main-exchange-container">
         <div class="backgroundImg"></div>
@@ -153,6 +153,17 @@
             </article>
         </section>
     </section> 
-    <footer></footer>
+    <footer>
+        <section class="left">
+            <ul>
+                <li> <a href="#">Linkedin</a></li>
+                <li> <a href="#">Crunchbasa</a></li>
+                <li> <a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="right">
+            <img src="./assets/imgs/logo-footer.svg" alt="logo de Batatabit 2021">
+        </section>
+    </footer>
 </body>
 </html>
